[gd_scene load_steps=16 format=2]

[ext_resource path="res://src/ui/separate_ui/main_menu.gd" type="Script" id=1]
[ext_resource path="res://assets/models/paper.dae" type="PackedScene" id=2]
[ext_resource path="res://assets/models/stall.glb" type="PackedScene" id=3]
[ext_resource path="res://assets/models/paper_set.dae" type="PackedScene" id=4]
[ext_resource path="res://assets/font/new_dynamicfont.tres" type="DynamicFont" id=5]
[ext_resource path="res://assets/font/DFVNCalignaRegular.otf" type="DynamicFontData" id=6]
[ext_resource path="res://assets/sounds/soundtracks/A_Man_Without_Love_Loop.ogg" type="AudioStream" id=7]
[ext_resource path="res://assets/font/DFVN Them Bones Regular.otf" type="DynamicFontData" id=8]
[ext_resource path="res://assets/models/radio_model.glb" type="PackedScene" id=9]

[sub_resource type="Animation" id=4]
resource_name = "BlinkingLight"
length = 1.3
tracks/0/type = "value"
tracks/0/path = NodePath("SpotLight:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.5, 0.6, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ true, false, true, false, true, false, true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("SpotLight:light_energy")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.9, 1.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 2.0, 0.0, 3.0 ]
}

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("SpotLight:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("SpotLight:light_energy")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 3.0 ]
}

[sub_resource type="SpatialMaterial" id=2]
albedo_color = Color( 0.482353, 0.478431, 0.478431, 1 )

[sub_resource type="SpatialMaterial" id=1]
albedo_color = Color( 0.384314, 0.376471, 0.376471, 1 )

[sub_resource type="DynamicFont" id=3]
size = 60
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=6]
font_data = ExtResource( 8 )

[node name="MainMenu" type="Spatial"]
script = ExtResource( 1 )
levelZeroPath = "res://maps/level_0.tscn"
changeLevelButton = NodePath("UI/MainControl/VBoxContainer/HBoxContainer/ChangeLevelButton")
MAX_LEVEL = 3

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.352, -1.828, -0.117 )

[node name="stall" parent="." instance=ExtResource( 3 )]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0.9, -2.43, -0.96 )

[node name="paper_set" parent="stall" instance=ExtResource( 4 )]
transform = Transform( 0.03, 0, 1.11022e-16, 0, 0.03, 0, -1.11022e-16, 0, 0.03, 0.0600004, 0.39, 0.12 )

[node name="paper_set3" parent="stall" instance=ExtResource( 4 )]
transform = Transform( 0.0281908, 0, -0.0102606, 0, 0.03, 0, 0.0102606, 0, 0.0281908, 0.0600005, 0.39, 0.33 )

[node name="paper_set2" parent="stall" instance=ExtResource( 4 )]
transform = Transform( 0.0259808, 0, 0.015, 0, 0.03, 0, -0.015, 0, 0.0259808, 0.0600002, 0.39, -0.12 )

[node name="TableObject" type="Spatial" parent="stall"]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -0.96, 2.43, -0.9 )

[node name="paper" parent="stall" instance=ExtResource( 2 )]
transform = Transform( 0.03, 0, 0, 0, 0.03, 0, 0, 0, 0.03, -0.21, 0.37, 0 )

[node name="SpotLight" type="SpotLight" parent="stall"]
transform = Transform( 0.173648, -0.984808, -2.93495e-08, 0, -2.98023e-08, 1, -0.984808, -0.173648, -5.17511e-09, -0.0155478, 1.324, 0.10479 )
light_color = Color( 0.976471, 0.956863, 0.662745, 1 )
light_energy = 3.0
light_indirect_energy = 0.547
spot_range = 1.289
spot_attenuation = 0.0441945
spot_angle = 27.1534
spot_angle_attenuation = 0.535887

[node name="SpotLightTimer" type="Timer" parent="stall/SpotLight"]
wait_time = 2.5
autostart = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="stall"]
anims/BlinkingLight = SubResource( 4 )
anims/RESET = SubResource( 5 )

[node name="radio_model" parent="stall" instance=ExtResource( 9 )]
transform = Transform( 0.000871557, 0, -0.00996195, 0, 0.01, 0, 0.00996195, 0, 0.000871557, 0.24, 0.364, -0.27 )

[node name="BoxSetup" type="Spatial" parent="."]

[node name="DownBox" type="CSGBox" parent="BoxSetup"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -2.5, 0 )
use_collision = true
width = 5.0
height = 0.1
depth = 5.0
material = SubResource( 2 )

[node name="UpBox" type="CSGBox" parent="BoxSetup"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.5, 0 )
width = 5.0
height = 0.1
depth = 5.0
material = SubResource( 1 )

[node name="CSGBox3" type="CSGBox" parent="BoxSetup"]
transform = Transform( -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, -2.5, 0, 0 )
width = 5.0
height = 0.1
depth = 5.0
material = SubResource( 1 )

[node name="CSGBox4" type="CSGBox" parent="BoxSetup"]
transform = Transform( -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 2.5, 0, 0 )
width = 5.0
height = 0.1
depth = 5.0
material = SubResource( 1 )

[node name="CSGBox5" type="CSGBox" parent="BoxSetup"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, -2.5 )
width = 5.0
height = 0.1
depth = 5.0
material = SubResource( 1 )

[node name="CSGBox6" type="CSGBox" parent="BoxSetup"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 2.5 )
width = 5.0
height = 0.1
depth = 5.0
material = SubResource( 1 )

[node name="UI" type="CanvasLayer" parent="."]

[node name="MainControl" type="Control" parent="UI"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Title" type="Label" parent="UI/MainControl"]
anchor_right = 1.0
margin_top = 80.0
margin_bottom = 137.0
custom_fonts/font = SubResource( 3 )
text = "Do you find this level familiar?"
align = 1

[node name="VBoxContainer" type="VBoxContainer" parent="UI/MainControl"]
anchor_left = 0.05
anchor_top = 0.5
anchor_right = 0.4
anchor_bottom = 0.5
margin_left = 3.0
margin_top = 153.0
margin_right = 43.0
margin_bottom = 130.0
custom_constants/separation = 15

[node name="StartButton" type="Button" parent="UI/MainControl/VBoxContainer"]
margin_right = 488.0
margin_bottom = 39.0
focus_neighbour_top = NodePath("../QuitButton")
focus_neighbour_bottom = NodePath("../OptionButton")
custom_fonts/font = ExtResource( 5 )
text = "Vòng lặp mới"
flat = true

[node name="HBoxContainer" type="HBoxContainer" parent="UI/MainControl/VBoxContainer"]
margin_top = 54.0
margin_right = 488.0
margin_bottom = 93.0

[node name="Previous" type="Button" parent="UI/MainControl/VBoxContainer/HBoxContainer"]
margin_right = 160.0
margin_bottom = 39.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 5 )
text = "Trước"
flat = true

[node name="ChangeLevelButton" type="Button" parent="UI/MainControl/VBoxContainer/HBoxContainer"]
margin_left = 164.0
margin_right = 324.0
margin_bottom = 39.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 5 )
text = "0"

[node name="Next" type="Button" parent="UI/MainControl/VBoxContainer/HBoxContainer"]
margin_left = 328.0
margin_right = 488.0
margin_bottom = 39.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 5 )
text = "Tiếp theo"
flat = true

[node name="OptionButton" type="Button" parent="UI/MainControl/VBoxContainer"]
margin_top = 108.0
margin_right = 488.0
margin_bottom = 147.0
focus_neighbour_top = NodePath("../StartButton")
focus_neighbour_bottom = NodePath("../QuitButton")
custom_fonts/font = ExtResource( 5 )
text = "Thiết lập"
flat = true

[node name="QuitButton" type="Button" parent="UI/MainControl/VBoxContainer"]
margin_top = 162.0
margin_right = 488.0
margin_bottom = 201.0
focus_neighbour_top = NodePath("../OptionButton")
focus_neighbour_bottom = NodePath("../StartButton")
custom_fonts/font = ExtResource( 5 )
text = "Thoát"
flat = true

[node name="SettingPanel" type="WindowDialog" parent="UI/MainControl"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -155.0
margin_top = -35.0
margin_right = 142.0
margin_bottom = 62.0
custom_fonts/title_font = SubResource( 6 )
window_title = "Thông số cài đặt"

[node name="VBoxContainer" type="VBoxContainer" parent="UI/MainControl/SettingPanel"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -20.5
margin_bottom = 20.5

[node name="CheckButton" type="CheckButton" parent="UI/MainControl/SettingPanel/VBoxContainer"]
margin_right = 297.0
margin_bottom = 41.0
custom_fonts/font = ExtResource( 5 )
pressed = true
text = "Âm thanh"

[node name="BackgroundMusic" type="AudioStreamPlayer3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.63, -1.98, -1.2 )
stream = ExtResource( 7 )
autoplay = true

[connection signal="timeout" from="stall/SpotLight/SpotLightTimer" to="." method="_on_SpotLightTimer_timeout"]
[connection signal="pressed" from="UI/MainControl/VBoxContainer/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="UI/MainControl/VBoxContainer/HBoxContainer/Previous" to="." method="_on_Previous_pressed"]
[connection signal="pressed" from="UI/MainControl/VBoxContainer/HBoxContainer/ChangeLevelButton" to="." method="_on_ChangeLevelButton_pressed"]
[connection signal="pressed" from="UI/MainControl/VBoxContainer/HBoxContainer/Next" to="." method="_on_Next_pressed"]
[connection signal="pressed" from="UI/MainControl/VBoxContainer/OptionButton" to="." method="_on_OptionButton_pressed"]
[connection signal="pressed" from="UI/MainControl/VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
[connection signal="toggled" from="UI/MainControl/SettingPanel/VBoxContainer/CheckButton" to="." method="_on_CheckButton_toggled"]
